overlapping header corrected

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@ header {
   top:0;
   left:0;
   width:100%;
+  z-index: 500;
 }
 
 /* Navigation Styles */
